# music-player

./: .gitignore  CMakeLists.txt  build-macos.sh  build-windows.bat
.github/workflows/: build.yml
resources/: style.qss
src/: main.cpp
src/app/: Application.cpp  Application.h
src/core/: AudioEngine.cpp  AudioEngine.h  LibraryScanner.cpp  LibraryScanner.h  LyricsManager.cpp  LyricsManager.h  TagManager.cpp  TagManager.h
src/db/: Database.cpp  Database.h
src/model/: Playlist.h  Track.h
src/network/: CoverArtService.cpp  CoverArtService.h  JamendoService.cpp  JamendoService.h  LyricsService.cpp  LyricsService.h
src/ui/: EqualizerWidget.cpp  EqualizerWidget.h  LibraryPanel.cpp  LibraryPanel.h  LyricsWidget.cpp  LyricsWidget.h  MainWindow.cpp  MainWindow.h  OnlineSearchDialog.cpp  OnlineSearchDialog.h  PlayerControls.cpp  PlayerControls.h  PlaylistPanel.cpp  PlaylistPanel.h  TagEditorDialog.cpp  TagEditorDialog.h  VisualizationWidget.cpp  VisualizationWidget.h
